syntax  = "proto3";
//import "google/protobuf/any.proto";
//option optimize_for = LITE_RUNTIME;
option java_package = "org.microg.common.beans";


message RequestClients {
  NamePack a = 1;
}

message NamePack{
  NameSigner builder = 3;
}
message NameSigner{
   string PackageName = 2;
   string singer = 1;
}